--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="wrapper row">
 
-    <div class="sidebar col-md-2">
+    <!-- <div class="sidebar col-5 col-md-2">
       <h2>Adam Faraj</h2>
       <a href="#">Home</a>
       <a href="http://adamfaraj.com/" target="_blank">My Website</a>
@@ -21,13 +21,43 @@
       <a href="./cars.html">Cars</a>
       <a href="./music.html">Music</a>
       <a href="./movies.html">Movies</a>
+    </div> -->
+
+    <div class="col col-lg-2 sidebar-wrapper">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light flex-lg-column align-items-baseline sidebar">
+        <a class="navbar-brand" href="#">Adam Faraj</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse align-items-baseline" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0 flex-lg-column">
+            <li class="nav-item active">
+              <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="http://adamfaraj.com" target="_blank">My Website</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                My Interests
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item text-white" href="./cars.html">Cars</a>
+                <a class="dropdown-item text-white" href="./music.html">Music</a>
+                <a class="dropdown-item text-white" href="./movies.html">Movies</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
 
-    <main class="col-md-10 pt-4">
+    <main class="col-md-12 p-5 col-lg-10">
 
-      <section class="about__section row align-items-center">
+      <section class="about__section row align-items-center py-4">
         <img src="./assets/images/me.jpg" alt="me" class="img-fluid about__image col-md-4">
-        <p class="about col-md-8">Hello good people at Ziosk. I'm Adam Faraj and welcome to my personal dashboard. I made this this Sunday during a lazy afternoon. Just something quick to showcase my HTML, CSS (with the help of Bootstrap), and JavaScript skills. I typically use Angular and React to build pages/apps, but these pages will be strictly the original three, no frameworks: HTML, CSS, JavaScript. Click the links on the left to learn a little more about me.</p>
+        <p class="about col-md-8 pt-sm-3">Hello good people at Ziosk. I'm Adam Faraj and welcome to my personal dashboard. I made this this Sunday during a lazy afternoon. Just something quick to showcase my HTML, CSS (with the help of Bootstrap), and JavaScript skills. I typically use Angular and React to build pages/apps, but these pages will be strictly the original three, no frameworks: HTML, CSS, JavaScript. Click the links on the left to learn a little more about me.</p>
       </section>
 
       <section>
