--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </nav>
     </div>
 
-    <main class="col-md-12 p-5 col-lg-10">
+    <main class="col-md-12 p-5 col-lg-10 offset-lg-2">
 
       <section class="about__section row align-items-center py-4">
         <img src="./assets/images/me.jpg" alt="me" class="img-fluid about__image col-md-4">
