fix responsive stuff

--- a/movies.html
+++ b/movies.html
@@ -29,7 +29,7 @@
 
     <div class="col col-lg-2 sidebar-wrapper">
       <nav class="navbar navbar-expand-lg navbar-light bg-light flex-lg-column align-items-baseline sidebar">
-        <a class="navbar-brand" href="#">Adam Faraj</a>
+        <a class="navbar-brand" href="./index.html">Adam Faraj</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -58,8 +58,10 @@
     </div>
 
     <main class="col-md-10 offset-lg-2 col-lg-10 pt-4">
-      <h1>Movies</h1>
-      <h5>I love watching movies and going to the theatre. Here are some of my favorite movies.</h5>
+      <div class="px-4">
+        <h1>Movies</h1>
+        <h5>I love watching movies and going to the theatre. Here are some of my favorite movies.</h5>
+      </div>
 
       <table id="movies" class="display table-striped table-compact cell-border" style="width:100%">
         <thead>
