--- a/music.html
+++ b/music.html
@@ -25,7 +25,7 @@
 
     <div class="col col-lg-2 sidebar-wrapper">
       <nav class="navbar navbar-expand-lg navbar-light bg-light flex-lg-column align-items-baseline sidebar">
-        <a class="navbar-brand" href="#">Adam Faraj</a>
+        <a class="navbar-brand" href="./index.html">Adam Faraj</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -54,8 +54,10 @@
     </div>
 
     <main class="col-md-10 offset-lg-2 col-lg-10 pt-4">
-      <h1>Music</h1>
-      <h5>I am always listening to music. I am always searching for new music and love going to concerts. Here are some of my favorite songs and songs I've been jamming to recently!</h5>
+      <div class="px-4">
+        <h1>Music</h1>
+        <h5>I am always listening to music. I am always searching for new music and love going to concerts. Here are some of my favorite songs and songs I've been jamming to recently!</h5>
+      </div>
 
       <div class="row row-cols-1 row-cols-md-3 p-5">
         <div class="col mb-4">
