--- a/music.html
+++ b/music.html
@@ -53,13 +53,13 @@
       </nav>
     </div>
 
-    <main class="col-md-10 offset-lg-2 col-lg-10 pt-4">
-      <div class="px-4">
+    <main class="col-md-10 offset-lg-2 col-lg-10">
+      <div class="p-4">
         <h1>Music</h1>
         <h5>I am always listening to music. I am always searching for new music and love going to concerts. Here are some of my favorite songs and songs I've been jamming to recently!</h5>
       </div>
 
-      <div class="row row-cols-1 row-cols-md-3 p-5">
+      <div class="row row-cols-1 row-cols-md-3 p-lg-5">
         <div class="col mb-4">
           <div class="card h-100">
             <img src="https://e-cdns-images.dzcdn.net/images/cover/7d8fb7cd3b588fe44cd49de72c70fe66/500x500-000000-80-0-0.jpg" class="card-img-top" alt="Vulfpeck">
