fix responsive stuff

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <section class="about__section row align-items-center py-4">
         <img src="./assets/images/me.jpg" alt="me" class="img-fluid about__image col-md-4">
-        <p class="about col-md-8 pt-sm-3">Hello good people at Ziosk. I'm Adam Faraj and welcome to my personal dashboard. I made this this Sunday during a lazy afternoon. Just something quick to showcase my HTML, CSS (with the help of Bootstrap), and JavaScript skills. I typically use Angular and React to build pages/apps, but these pages will be strictly the original three, no frameworks: HTML, CSS, JavaScript. Click the links on the left to learn a little more about me.</p>
+        <p class="about col-md-8 pt-sm-3">Hello good people at Ziosk. I'm Adam Faraj and welcome to my personal dashboard. I made this this Sunday during a lazy afternoon. Just something quick to showcase my HTML, CSS (with the help of Bootstrap), and JavaScript skills. I typically use Angular and React to build pages/apps, but these pages will be strictly the original three, no frameworks: HTML, CSS, JavaScript. Click the links in the menu to learn a little more about me.</p>
       </section>
 
       <section>
