--- a/movies.html
+++ b/movies.html
@@ -27,7 +27,7 @@
       <a href="#">Movies</a>
     </div> -->
 
-    <div class="col col-lg-2 sidebar-wrapper">
+    <div class="col col-lg-2 pr-0 sidebar-wrapper">
       <nav class="navbar navbar-expand-lg navbar-light bg-light flex-lg-column align-items-baseline sidebar">
         <a class="navbar-brand" href="./index.html">Adam Faraj</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
       </nav>
     </div>
 
-    <main class="col-md-10 offset-lg-2 col-lg-10 pt-4">
+    <main class="col-md-10 offset-lg-2 col-lg-10 p-4">
       <div class="px-4">
         <h1>Movies</h1>
         <h5>I love watching movies and going to the theatre. Here are some of my favorite movies.</h5>
