--- a/music.html
+++ b/music.html
@@ -146,12 +146,14 @@
         </div>
       </div>
 
-      <h2>I should stop with this page now because I can go on all day.</h2>
-      <h2>Search for your favorite song!</h2>
-
-      <label for="music-search" class="mt-5">Search for you favorite music!</label>
-      <input type="text" id="music-search" name="music-search">
-      <button class="btn btn-primary" id="music-search__button">Search</button>
+      <div class="p-4">
+        <h2>I should stop with this page now because I can go on all day.</h2>
+        <h2>Search for your favorite song!</h2>
+  
+        <label for="music-search" class="mt-5">Search for you favorite music!</label>
+        <input type="text" id="music-search" name="music-search">
+        <button class="btn btn-primary" id="music-search__button">Search</button>
+      </div>
 
       <ul class="music-list"></ul>
     </main>
