--- a/index.html
+++ b/index.html
@@ -10,39 +10,41 @@
 </head>
 <body>
 
-  <div class="wrapper row">
+  <div class="row no-gutters">
 
-    <div class="col col-lg-2 sidebar-wrapper">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light flex-lg-column align-items-baseline sidebar">
-        <a class="navbar-brand" href="#">Adam Faraj</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse align-items-baseline" id="navbarTogglerDemo02">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0 flex-lg-column">
-            <li class="nav-item active">
-              <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="http://adamfaraj.com" target="_blank">My Website</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                My Interests
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item text-white" href="./cars.html">Cars</a>
-                <a class="dropdown-item text-white" href="./music.html">Music</a>
-                <a class="dropdown-item text-white" href="./movies.html">Movies</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
+    <div class="col col-lg-2">
+      <div class="sidebar-wrapper">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light flex-lg-column align-items-baseline sidebar">
+          <a class="navbar-brand" href="#">Adam Faraj</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        
+          <div class="collapse navbar-collapse align-items-baseline" id="navbarTogglerDemo02">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0 flex-lg-column">
+              <li class="nav-item active">
+                <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="http://adamfaraj.com" target="_blank">My Website</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  My Interests
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item text-white" href="./cars.html">Cars</a>
+                  <a class="dropdown-item text-white" href="./music.html">Music</a>
+                  <a class="dropdown-item text-white" href="./movies.html">Movies</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </div>
 
-    <main class="col-md-12 p-5 col-lg-10 offset-lg-2">
+    <main class="col-md-12 p-3 col-lg-10">
 
       <section class="about__section row align-items-center py-4">
         <img src="./assets/images/me.jpg" alt="me" class="img-fluid about__image col-md-4">
