--- a/music.html
+++ b/music.html
@@ -12,48 +12,39 @@
 
   <div class="wrapper row">
 
-    <!-- <div class="sidebar position-fixed col-md-2">
-      <h2>Adam Faraj</h2>
-      <a href="./index.html">Home</a>
-      <a href="http://adamfaraj.com/" target="_blank">My Website</a>
-      <div class="dropdown-divider mx-3"></div>
-      <h3>Interests</h3>
-      <a href="./cars.html">Cars</a>
-      <a href="#">Music</a>
-      <a href="./movies.html">Movies</a>
-    </div> -->
+    <div class="col col-lg-2">
+      <div class="sidebar-wrapper">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light flex-lg-column align-items-baseline sidebar">
+          <a class="navbar-brand" href="./index.html">Adam Faraj</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-    <div class="col col-lg-2 sidebar-wrapper">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light flex-lg-column align-items-baseline sidebar">
-        <a class="navbar-brand" href="./index.html">Adam Faraj</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse align-items-baseline" id="navbarTogglerDemo02">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0 flex-lg-column">
-            <li class="nav-item active">
-              <a class="nav-link text-white" href="./index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="http://adamfaraj.com" target="_blank">My Website</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                My Interests
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item text-white" href="./cars.html">Cars</a>
-                <a class="dropdown-item text-white" href="./music.html">Music</a>
-                <a class="dropdown-item text-white" href="./movies.html">Movies</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
+          <div class="collapse navbar-collapse align-items-baseline" id="navbarTogglerDemo02">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0 flex-lg-column">
+              <li class="nav-item active">
+                <a class="nav-link text-white" href="./index.html">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="http://adamfaraj.com" target="_blank">My Website</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  My Interests
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item text-white" href="./cars.html">Cars</a>
+                  <a class="dropdown-item text-white" href="./music.html">Music</a>
+                  <a class="dropdown-item text-white" href="./movies.html">Movies</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </div>
 
-    <main class="col-md-10 offset-lg-2 col-lg-10">
+    <main class="col-md-10 col-lg-10">
       <div class="p-4">
         <h1>Music</h1>
         <h5>I am always listening to music. I am always searching for new music and love going to concerts. Here are some of my favorite songs and songs I've been jamming to recently!</h5>
