--- a/cars.html
+++ b/cars.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <div class="wrapper row">
+  <div class="row no-gutters">
 
     <div class="col col-lg-2">
       <div class="sidebar-wrapper">
