--- a/movies.html
+++ b/movies.html
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <main class="col-md-10 col-lg-10 p-4">
+    <main class="col p-4">
       <div class="px-4">
         <h1>Movies</h1>
         <h5>I love watching movies and going to the theatre. Here are some of my favorite movies.</h5>
