--- a/movies.html
+++ b/movies.html
@@ -16,7 +16,7 @@
 
   <div class="row no-gutters">
 
-    <div class="col col-lg-2 pr-0">
+    <div class="col-lg-2 pr-0">
       <div class="sidebar-wrapper">
         <nav class="navbar navbar-expand-lg navbar-light bg-light flex-lg-column align-items-baseline sidebar">
           <a class="navbar-brand" href="./index.html">Adam Faraj</a>
