--- a/music.html
+++ b/music.html
@@ -12,7 +12,7 @@
 
   <div class="row no-gutters">
 
-    <div class="col col-lg-2">
+    <div class="col-lg-2">
       <div class="sidebar-wrapper">
         <nav class="navbar navbar-expand-lg navbar-light bg-light flex-lg-column align-items-baseline sidebar">
           <a class="navbar-brand" href="./index.html">Adam Faraj</a>
@@ -44,11 +44,9 @@
       </div>
     </div>
 
-    <main class="col-md-10 col-lg-10">
-      <div class="p-4">
-        <h1>Music</h1>
-        <h5>I am always listening to music. I am always searching for new music and love going to concerts. Here are some of my favorite songs and songs I've been jamming to recently!</h5>
-      </div>
+    <main class="col p-4">
+      <h1>Music</h1>
+      <h5>I am always listening to music. I am always searching for new music and love going to concerts. Here are some of my favorite songs and songs I've been jamming to recently!</h5>
 
       <div class="row row-cols-1 row-cols-md-3 p-lg-5">
         <div class="col mb-4">
