--- a/cars.html
+++ b/cars.html
@@ -12,7 +12,7 @@
 
   <div class="row no-gutters">
 
-    <div class="col col-lg-2">
+    <div class="col-lg-2">
       <div class="sidebar-wrapper">
         <nav class="navbar navbar-expand-lg navbar-light bg-light flex-lg-column align-items-baseline sidebar">
           <a class="navbar-brand" href="./index.html">Adam Faraj</a>
@@ -44,11 +44,9 @@
       </div>
     </div>
 
-    <main class="col-md-10 col-lg-10 pt-3">
-      <div class="px-4">
-        <h1>Cars</h1>
-        <h5>I'm a huge car nerd. I have been since I was little. Here are some of my cars that I've owned.</h5>
-      </div>
+    <main class="col p-3">
+      <h1>Cars</h1>
+      <h5>I'm a huge car nerd. I have been since I was little. Here are some of my cars that I've owned.</h5>
 
       <div class="row row-cols-1 row-cols-md-3 p-5">
         <div class="col mb-4">
