--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                   My Interests
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item text-white" href="./cars.html">Cars</a>
-                  <a class="dropdown-item text-white" href="./music.html">Music</a>
-                  <a class="dropdown-item text-white" href="./movies.html">Movies</a>
+                  <a class="dropdown-item" href="./cars.html">Cars</a>
+                  <a class="dropdown-item" href="./music.html">Music</a>
+                  <a class="dropdown-item" href="./movies.html">Movies</a>
                 </div>
               </li>
             </ul>
